# SavantEngine-RRF-Made-Refactored

./: README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: test.yml
api/: app.py  index.py  main.py  vercel.json
benchmarks/phi4_1/: baseline_phi4_1.json  run_rrf_benchmark.py
notebooks/: SavantEngine_RRF_Clean_Colab.ipynb
savant_engine/: README.md  __init__.py  app.py  config.json  generation_config.json  index.html  model.safetensors  pse_ci_colab.patch  pyproject.toml  pytest.ini  requirements-api.txt  requirements.txt  savant_client.py
savant_engine/api/: index.py  main.py  vercel.json
savant_engine/prosavant_engine/: README.md  __init__.py  bootstrap_savant.py  colab_utils.py  config.py  core.py  core_programmatic_demo.py:  data.py  gauge.py  geometry.py  gnn_dirac.py  icosahedral_rrf.py  main.py  networking.py  physics.py  reflection.py  resonance.py  rrf_cnn.py  run_core_cli.py  savant_engine.py  self_improvement.py  ui.py  utils.py
