[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "savantengine-rrf"
version = "0.1.0"
description = "SavantEngine RRF - resonant quality and reranking engine for scientific LLM text"
authors = [{ name = "Antony Padilla Morales" }]
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sentence-transformers",
  "scikit-learn",
  "numpy",
  "pydantic>=2",
  "requests"
]

[project.urls]
Homepage = "https://github.com/antonypamo/SavantEngine-RRF-Made-Refactored"
